--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require": {
         "php": "^7.3",
-        "ext-yaml": "*",
+        "symfony/yaml": "~4",
         "ext-json": "*"
     },
     "require-dev": {
